--- a/package.json
+++ b/package.json
@@ -52,5 +52,9 @@
     "tsdx": "^0.14.1",
     "tslib": "^2.3.1",
     "typescript": "^4.5.4"
+  },
+  "dependencies": {
+    "axios": "^0.24.0",
+    "dotenv": "^11.0.0"
   }
 }
